reunification et modification

--- a/accueil.html
+++ b/accueil.html
@@ -1,7 +1,7 @@
-<html><head><base href="https://autonomie-femmes.fr/accueil">
+<html><head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EmpowerHer - Formation et Développement Personnel pour Femmes</title>
+<title>accueil - jfe </title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
 
@@ -348,14 +348,15 @@
       <nav>
         <div class="logo">EmpowerHer</div>
         <div class="nav-links">
+          <a href="https://autonomie-femmes.fr/">Accueil</a>
           <a href="https://autonomie-femmes.fr/programmes">Programmes</a>
-          <a href="https://autonomie-femmes.fr/a-propos">À propos</a>
+          <a href="https://autonomie-femmes.fr/apropos">À propos</a>
           <a href="https://autonomie-femmes.fr/contact">Contact</a>
         </div>
       </nav>
     </div>
   </header>
-
+  
   <main>
     <section class="hero">
       <div class="hero-content">
