--- a/apropos.html
+++ b/apropos.html
@@ -1,7 +1,7 @@
-<html><head><base href="https://autonomie-femmes.fr/apropos">
+<html><head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>À Propos - EmpowerHer</title>
+<title>À Propos - jfe</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
 
@@ -31,6 +31,10 @@
     background-color: var(--primary-blue);
     color: var(--white);
     padding: 20px 0;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    transition: all 0.3s ease;
   }
 
   nav {
