ajout des éléments et photos

--- a/accueil.html
+++ b/accueil.html
@@ -346,17 +346,17 @@
   <header>
     <div class="container">
       <nav>
-        <div class="logo">EmpowerHer</div>
+        <div class="logo">jeune femme éveillée</div>
         <div class="nav-links">
-          <a href="https://autonomie-femmes.fr/">Accueil</a>
-          <a href="https://autonomie-femmes.fr/programmes">Programmes</a>
-          <a href="https://autonomie-femmes.fr/apropos">À propos</a>
-          <a href="https://autonomie-femmes.fr/contact">Contact</a>
+          <a href="./accueil.html">Accueil</a>
+          <a href="./programmes.html">Programmes</a>
+          <a href="./apropos.html">À propos</a>
+          <a href="./contact.html">Contact</a>
         </div>
       </nav>
     </div>
   </header>
-  
+
   <main>
     <section class="hero">
       <div class="hero-content">
@@ -402,18 +402,18 @@
           <div class="testimonial-slide">
             <div class="testimonial-content">
               <div class="testimonial-image">
-                <img src="https://autonomie-femmes.fr/images/testimonial-1.jpg" alt="Portrait de Sophie, femme souriante aux cheveux bruns" width="100" height="100">
+                <img src="https://images.pexels.com/photos/27296458/pexels-photo-27296458/free-photo-of-femme-modele-visage-portrait.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Portrait de Sophie, femme souriante aux cheveux bruns" width="100" height="100">
               </div>
-              <p class="testimonial-text">"Grâce à EmpowerHer, j'ai trouvé la confiance nécessaire pour lancer ma propre entreprise. Les ateliers et le soutien de la communauté ont été inestimables."</p>
+              <p class="testimonial-text">"Grâce à jeune femme éveillée, j'ai trouvé la confiance nécessaire pour lancer ma propre entreprise. Les ateliers et le soutien de la communauté ont été inestimables."</p>
               <p class="testimonial-author">Sophie D., Entrepreneure</p>
             </div>
           </div>
           <div class="testimonial-slide">
             <div class="testimonial-content">
               <div class="testimonial-image">
-                <img src="https://autonomie-femmes.fr/images/testimonial-2.jpg" alt="Portrait de Marie, femme confiante aux cheveux blonds" width="100" height="100">
+                <img src="https://images.pexels.com/photos/12320256/pexels-photo-12320256.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Portrait de Marie, femme confiante aux cheveux blonds" width="100" height="100">
               </div>
-              <p class="testimonial-text">"Les programmes de leadership d'EmpowerHer m'ont aidée à gravir les échelons dans mon entreprise. Je suis maintenant directrice et je me sens prête à relever tous les défis."</p>
+              <p class="testimonial-text">"Les programmes de leadership d'jeune femme éveillée m'ont aidée à gravir les échelons dans mon entreprise. Je suis maintenant directrice et je me sens prête à relever tous les défis."</p>
               <p class="testimonial-author">Marie L., Directrice Marketing</p>
             </div>
           </div>
@@ -426,16 +426,16 @@
         <h2>Nos Ateliers en Images</h2>
         <div class="gallery-grid">
           <div class="gallery-item">
-            <img src="https://autonomie-femmes.fr/images/workshop-1.jpg" alt="Atelier de groupe animé, femmes discutant autour d'une table" width="300" height="200">
+            <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/453231327_1841496276334424_6124667574687364099_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeFYphE7OFLckTbe5eDBprgnde-5YI6Cu6R177lgjoK7pK9t-WpFouP5HZub5Xqzw0avvzKureoOJX9XhUxnaZkE&_nc_ohc=MiKF28pU6ywQ7kNvgFnuAx8&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYBDxhHyh524_xcF3wLGRnmafrCtGF00mR0sBcih3KCPcg&oe=66AD5874" alt="Atelier de groupe animé, femmes discutant autour d'une table" width="300" height="200">
           </div>
           <div class="gallery-item">
-            <img src="https://autonomie-femmes.fr/images/workshop-2.jpg" alt="Présentation devant un public attentif de femmes professionnelles" width="300" height="200">
+            <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/453250872_1841496269667758_4334586320930688338_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeH1CRo9x1wbHmQoNGXvvyO0-UXzE0vN2m35RfMTS83abSbgJ4HvlTt4ZFQPBmNMtYBmRZOXc4E5dAMYbLJz5r12&_nc_ohc=rKIlHD25QP8Q7kNvgFHCc40&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYAz-Vp5ue3XWIsNopUPrS88fohuRytOk4DK9tXpX6gS5g&oe=66AD7FF3" alt="Présentation devant un public attentif de femmes professionnelles" width="300" height="200">
           </div>
           <div class="gallery-item">
-            <img src="https://autonomie-femmes.fr/images/workshop-3.jpg" alt="Séance de coaching individuel, deux femmes en discussion" width="300" height="200">
+            <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/452177672_1834942543656464_3523667760959329271_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeEiQpG-HnwzUJhWg-cB9HjkpPi3n2L6j4ik-LefYvqPiA5bOF-JhDHMsROUbeZiaPmGV5SSEJn9Eb2eeL6jW6kn&_nc_ohc=iQER69wUBUIQ7kNvgHKxTtE&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYAJqKiZxkOvOxVxG4xQkYHYwHhgI_YDWt84hXD6oqDb1Q&oe=66AD731A" alt="Séance de coaching individuel, deux femmes en discussion" width="300" height="200">
           </div>
           <div class="gallery-item">
-            <img src="https://autonomie-femmes.fr/images/workshop-4.jpg" alt="Networking event, femmes échangeant des cartes de visite" width="300" height="200">
+            <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/453374759_1841496299667755_1770110753043515539_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeG0Ve-byZn38LJVQFPWAg8QxlFW140Elr3GUVbXjQSWvdY8vchWedSZItgGSVIFn_Vl8pSObnY5QWakawrIWz3E&_nc_ohc=M1QuLPw7FWwQ7kNvgG2BXFo&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYBgJJh44dIprglqAwjooVTaG67ckXvYSpF6ckVxiD3T4Q&oe=66AD67BE" alt="Networking event, femmes échangeant des cartes de visite" width="300" height="200">
           </div>
         </div>
       </div>
@@ -447,7 +447,7 @@
       <div class="footer-content">
         <div class="footer-section">
           <h3>À Propos</h3>
-          <p>EmpowerHer est dédié à l'autonomisation des femmes à travers des formations et du développement personnel.</p>
+          <p>jeune femme éveillée est dédié à l'autonomisation des femmes à travers des formations et du développement personnel.</p>
         </div>
         <div class="footer-section">
           <h3>Liens Rapides</h3>
