--- a/apropos.html
+++ b/apropos.html
@@ -264,12 +264,12 @@
   <header>
     <div class="container">
       <nav>
-        <div class="logo">EmpowerHer</div>
+        <div class="logo">jeune femme éveillée</div>
         <div class="nav-links">
-          <a href="https://autonomie-femmes.fr/">Accueil</a>
-          <a href="https://autonomie-femmes.fr/programmes">Programmes</a>
-          <a href="https://autonomie-femmes.fr/apropos">À propos</a>
-          <a href="https://autonomie-femmes.fr/contact">Contact</a>
+          <a href="./accueil.html">Accueil</a>
+          <a href="./programmes.html">Programmes</a>
+          <a href="./apropos.html">À propos</a>
+          <a href="./contact.html">Contact</a>
         </div>
       </nav>
     </div>
@@ -278,7 +278,7 @@
   <main>
     <section class="hero">
       <div class="container">
-        <h1>À Propos d'EmpowerHer</h1>
+        <h1>À Propos de jeune femme éveillée</h1>
         <p>Découvrez notre mission, notre équipe et nos valeurs pour l'autonomisation des femmes</p>
       </div>
     </section>
@@ -286,12 +286,13 @@
     <section class="about-section">
       <div class="container">
         <div class="about-grid">
-          <img src="https://autonomie-femmes.fr/images/about-empowerher.jpg" alt="Femmes participant à un atelier EmpowerHer" class="about-image" width="600" height="400">
+          <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/453262303_1841496169667768_3084310341274874982_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeH4xCy83WTIwyStdpzJ9oBBp_deDOsPb0On914M6w9vQy-QutCBKJIkw0a5lrEEyGsbmwjdm9Gm_mvC92DCzkEb&_nc_ohc=nx0B01O1AYIQ7kNvgEr4RcT&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYApJhIjrp04CIUTs8COuiIthTVO1GPs1DYZe0YQFw636Q&oe=66AD5F0A" alt="Femmes participant à un atelier jeune femme éveillée" class="about-image" width="600" height="400">
           <div class="about-content">
             <h2>Notre Histoire</h2>
-            <p>EmpowerHer a été fondée en 2015 par un groupe de femmes professionnelles passionnées par l'idée de créer un espace où les femmes pourraient se développer, s'épanouir et atteindre leur plein potentiel.</p>
-            <p>Depuis, nous avons accompagné des milliers de femmes dans leur parcours professionnel et personnel, en leur offrant des formations de qualité, du mentorat et un réseau de soutien inestimable.</p>
-            <p>Notre mission est de briser les barrières, de promouvoir l'égalité des chances et d'inspirer les femmes à devenir les leaders de demain dans tous les domaines de la société.</p>
+            <p> Fondée en 2023, jeune femme éveillée est une plateforme de formation dont le but est justement d'éveiller la conscience des femmes afin que celles-ci ressortent le plein potentiel qu'elles ont.
+              Reléguées souvent hors de la course vers l'excellence et placée généralement dans le rôle de femme au foyer, la femme a petit à petit éteint le feu de sa passion, revu à la baisse ses ambitions de vie.</p>
+            <p>Notre plateforme s'est donc donnée pour but d'éveiller la conscience, d'encourager et de motiver la femme à se détacher des limites et des forteresses de pensées et de conceptions réductrices afin de poursuivre ses rêves, ses ambitions tout en gardant un équilibre basé sur les sages conseils de la Bible.</p>
+            <p>Elle a un potentiel et le monde a besoin de son potentiel à un horizon sans limites.</p>
           </div>
         </div>
       </div>
@@ -302,25 +303,25 @@
         <h2>Notre Équipe</h2>
         <div class="team-grid">
           <div class="team-member">
-            <img src="https://autonomie-femmes.fr/images/team-member-1.jpg" alt="Portrait de Marie Dupont, fondatrice et CEO" class="team-member-image" width="250" height="300">
+            <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/452204901_1834943480323037_1950257659356608125_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeHbXYI2YB9Pq0z_W7nUwIVCkf_44fSd7ciR__jh9J3tyGuR0yvOmeDZrbUBtF94OGW3HRbEoonom3ZrDUYFHyam&_nc_ohc=1N_HQWzRcpoQ7kNvgGuyCaf&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYARc1GEz7OVMhQGFG61L16a5-3qj3EwPO0tfoeAun1i2Q&oe=66AD79D8" alt="Portrait de Marie Dupont, fondatrice et CEO" class="team-member-image" width="250" height="300">
             <div class="team-member-info">
-              <h3 class="team-member-name">Marie Dupont</h3>
+              <h3 class="team-member-name">Coach Klg</h3>
               <p class="team-member-role">Fondatrice et CEO</p>
               <p>Passionnée par l'autonomisation des femmes et le leadership inclusif.</p>
             </div>
           </div>
           <div class="team-member">
-            <img src="https://autonomie-femmes.fr/images/team-member-2.jpg" alt="Portrait de Sophie Martin, Directrice des Programmes" class="team-member-image" width="250" height="300">
+            <img src="https://media.istockphoto.com/id/1412652081/photo/ethnic-small-business-owner-smiling-cheerfully-in-her-shop.jpg?s=1024x1024&w=is&k=20&c=fGjHVq4e1-_mbd7XBZi9Dhdp4Bi0sUbkYk6aMPc1uJo=" alt="Portrait de Sophie Martin, Directrice des Programmes" class="team-member-image" width="250" height="300">
             <div class="team-member-info">
-              <h3 class="team-member-name">Sophie Martin</h3>
+              <h3 class="team-member-name">Sophie Ngoy</h3>
               <p class="team-member-role">Directrice des Programmes</p>
               <p>Experte en développement professionnel et gestion de carrière.</p>
             </div>
           </div>
           <div class="team-member">
-            <img src="https://autonomie-femmes.fr/images/team-member-3.jpg" alt="Portrait de Laure Benoit, Coach en Leadership" class="team-member-image" width="250" height="300">
+            <img src="https://media.istockphoto.com/id/1398994132/photo/happy-businesswoman-using-a-digital-tablet-young-leading-businesswoman-using-a-wireless.jpg?s=1024x1024&w=is&k=20&c=W35ywsjgemV4txriyvml2ytWzz01Wmaa1gCGYujkHYw=" alt="Portrait de Laure Benoit, Coach en Leadership" class="team-member-image" width="250" height="300">
             <div class="team-member-info">
-              <h3 class="team-member-name">Laure Benoit</h3>
+              <h3 class="team-member-name">Laure Benga</h3>
               <p class="team-member-role">Coach en Leadership</p>
               <p>Spécialiste du développement personnel et du leadership authentique.</p>
             </div>
@@ -363,7 +364,7 @@
       <div class="footer-content">
         <div class="footer-section">
           <h3>À Propos</h3>
-          <p>EmpowerHer est dédié à l'autonomisation des femmes à travers des formations et du développement personnel.</p>
+          <p>jeune femme éveillée est dédié à l'autonomisation des femmes à travers des formations et du développement personnel.</p>
         </div>
         <div class="footer-section">
           <h3>Liens Rapides</h3>
