--- a/contact.html
+++ b/contact.html
@@ -232,12 +232,12 @@
   <header>
     <div class="container">
       <nav>
-        <div class="logo">EmpowerHer</div>
+        <div class="logo">jeune femme éveillée</div>
         <div class="nav-links">
-          <a href="https://autonomie-femmes.fr/">Accueil</a>
-          <a href="https://autonomie-femmes.fr/programmes">Programmes</a>
-          <a href="https://autonomie-femmes.fr/apropos">À propos</a>
-          <a href="https://autonomie-femmes.fr/contact">Contact</a>
+          <a href="./accueil.html">Accueil</a>
+          <a href="./programmes.html">Programmes</a>
+          <a href="./apropos.html">À propos</a>
+          <a href="./contact.html">Contact</a>
         </div>
       </nav>
     </div>
@@ -288,7 +288,7 @@
             </div>
             <div class="contact-item">
               <h3>Email</h3>
-              <p>contact@empowerher.fr</p>
+              <p>contact@jeune femme éveillée.fr</p>
             </div>
             <div class="contact-item">
               <h3>Horaires</h3>
@@ -296,10 +296,10 @@
               <p>Samedi: 10h00 - 14h00</p>
             </div>
             <div class="social-icons">
-              <a href="https://facebook.com/empowerher" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-              <a href="https://twitter.com/empowerher" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-              <a href="https://instagram.com/empowerher" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-              <a href="https://linkedin.com/company/empowerher" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+              <a href="https://facebook.com/jeune femme éveillée" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+              <a href="https://twitter.com/jeune femme éveillée" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+              <a href="https://instagram.com/jeune femme éveillée" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+              <a href="https://linkedin.com/company/jeune femme éveillée" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -312,7 +312,7 @@
       <div class="footer-content">
         <div class="footer-section">
           <h3>À Propos</h3>
-          <p>EmpowerHer est dédié à l'autonomisation des femmes à travers des formations et du développement personnel.</p>
+          <p>jeune femme éveillée est dédié à l'autonomisation des femmes à travers des formations et du développement personnel.</p>
         </div>
         <div class="footer-section">
           <h3>Liens Rapides</h3>
@@ -326,10 +326,10 @@
         <div class="footer-section">
           <h3>Suivez-nous</h3>
           <div class="social-icons">
-            <a href="https://facebook.com/empowerher" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-            <a href="https://twitter.com/empowerher" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="https://instagram.com/empowerher" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://linkedin.com/company/empowerher" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://facebook.com/jeune femme éveillée" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/jeune femme éveillée" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com/jeune femme éveillée" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://linkedin.com/company/jeune femme éveillée" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
       </div>
