--- a/programmes.html
+++ b/programmes.html
@@ -220,12 +220,12 @@
   <header>
     <div class="container">
       <nav>
-        <div class="logo">EmpowerHer</div>
+        <div class="logo">jeune femme éveillée</div>
         <div class="nav-links">
-          <a href="https://autonomie-femmes.fr/">Accueil</a>
-          <a href="https://autonomie-femmes.fr/programmes">Programmes</a>
-          <a href="https://autonomie-femmes.fr/a-propos">À propos</a>
-          <a href="https://autonomie-femmes.fr/contact">Contact</a>
+          <a href="./accueil.html">Accueil</a>
+          <a href="./programmes.html">Programmes</a>
+          <a href="./apropos.html">À propos</a>
+          <a href="./contact.html">Contact</a>
         </div>
       </nav>
     </div>
@@ -244,7 +244,7 @@
         <div class="program-grid">
           <div class="program-card">
             <div class="program-image">
-              <img src="https://autonomie-femmes.fr/images/leadership-program.jpg" alt="Femmes en discussion lors d'un atelier de leadership" width="300" height="200">
+              <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/453341199_1841496229667762_9041154318845287589_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeEKh-OGFYhmAqWcWfhDhcQZQAG5TQcTslRAAblNBxOyVEmkKYGQbX8CUENd9wdlPlf8qbCQSBDEMO5iNwI0isIc&_nc_ohc=fhpQ3_rbgIIQ7kNvgGAm9Uz&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYDbH_EFA6ImFXmb-CUfACZLM4K5UBoYRwiWOqScqu4GYA&oe=66AD8356" alt="Femmes en discussion lors d'un atelier de leadership" width="300" height="200">
             </div>
             <div class="program-content">
               <h2 class="program-title">Leadership Féminin</h2>
@@ -254,7 +254,7 @@
           </div>
           <div class="program-card">
             <div class="program-image">
-              <img src="https://autonomie-femmes.fr/images/career-development.jpg" alt="Femme travaillant sur son plan de carrière" width="300" height="200">
+              <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/453231327_1841496276334424_6124667574687364099_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeFYphE7OFLckTbe5eDBprgnde-5YI6Cu6R177lgjoK7pK9t-WpFouP5HZub5Xqzw0avvzKureoOJX9XhUxnaZkE&_nc_ohc=MiKF28pU6ywQ7kNvgFnuAx8&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYBDxhHyh524_xcF3wLGRnmafrCtGF00mR0sBcih3KCPcg&oe=66AD5874" alt="Femme travaillant sur son plan de carrière" width="300" height="200">
             </div>
             <div class="program-content">
               <h2 class="program-title">Développement de Carrière</h2>
@@ -264,7 +264,7 @@
           </div>
           <div class="program-card">
             <div class="program-image">
-              <img src="https://autonomie-femmes.fr/images/entrepreneurship.jpg" alt="Femme entrepreneur présentant son projet" width="300" height="200">
+              <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/453374759_1841496299667755_1770110753043515539_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeG0Ve-byZn38LJVQFPWAg8QxlFW140Elr3GUVbXjQSWvdY8vchWedSZItgGSVIFn_Vl8pSObnY5QWakawrIWz3E&_nc_ohc=M1QuLPw7FWwQ7kNvgG2BXFo&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYBgJJh44dIprglqAwjooVTaG67ckXvYSpF6ckVxiD3T4Q&oe=66AD67BE" alt="Femme entrepreneur présentant son projet" width="300" height="200">
             </div>
             <div class="program-content">
               <h2 class="program-title">Entrepreneuriat au Féminin</h2>
@@ -274,7 +274,7 @@
           </div>
           <div class="program-card">
             <div class="program-image">
-              <img src="https://autonomie-femmes.fr/images/work-life-balance.jpg" alt="Femme pratiquant la méditation pour l'équilibre vie-travail" width="300" height="200">
+              <img src="https://images.pexels.com/photos/3205570/pexels-photo-3205570.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Femme pratiquant la méditation pour l'équilibre vie-travail" width="300" height="200">
             </div>
             <div class="program-content">
               <h2 class="program-title">Équilibre Vie Professionnelle et Personnelle</h2>
@@ -292,7 +292,7 @@
       <div class="footer-content">
         <div class="footer-section">
           <h3>À Propos</h3>
-          <p>EmpowerHer est dédié à l'autonomisation des femmes à travers des formations et du développement personnel.</p>
+          <p>jeune femme éveillée est dédié à l'autonomisation des femmes à travers des formations et du développement personnel.</p>
         </div>
         <div class="footer-section">
           <h3>Liens Rapides</h3>
