ajout des éléments et photos

--- a/apropos.html
+++ b/apropos.html
@@ -369,10 +369,10 @@
         <div class="footer-section">
           <h3>Liens Rapides</h3>
           <ul>
-            <li><a href="https://autonomie-femmes.fr/programmes">Nos Programmes</a></li>
+            <li><a href="./programmes.html">Nos Programmes</a></li>
             <li><a href="https://autonomie-femmes.fr/blog">Blog</a></li>
             <li><a href="https://autonomie-femmes.fr/evenements">Événements</a></li>
-            <li><a href="https://autonomie-femmes.fr/contact">Nous Contacter</a></li>
+            <li><a href="./contact.html">Nous Contacter</a></li>
           </ul>
         </div>
         <div class="footer-section">
