--- a/accueil.html
+++ b/accueil.html
@@ -30,7 +30,7 @@
   header {
     background-color: var(--primary-blue);
     color: var(--white);
-    padding: 20px 0;
+    padding: 5px 0;
     position: fixed;
     width: 100%;
     z-index: 1000;
@@ -53,6 +53,10 @@
     font-weight: 700;
   }
 
+  .logo img{
+    width: 6rem;
+  }
+
   .nav-links {
     display: flex;
     gap: 20px;
@@ -68,6 +72,9 @@
     color: var(--light-blue);
   }
 
+  .nav-links.active {
+  display: flex;
+}
   .hero {
     height: 100vh;
     display: flex;
@@ -315,6 +322,14 @@
     color: var(--light-blue);
   }
 
+  #menu-toggle{
+    display: none;
+    cursor: pointer;
+  }
+
+  #menu-toggle.active{
+    color: var(--secondary-blue);
+  }
   @keyframes fadeInUp {
     to {
       opacity: 1;
@@ -338,6 +353,22 @@
     .footer-content {
       flex-direction: column;
     }
+
+    #menu-toggle{
+    display: block;
+  }
+
+  .nav-links{
+    display: none;
+    flex-direction: column;
+      gap: 10px;
+      position: absolute;
+      top: 60px;
+      right: 20px;
+      background-color: var(--primary-blue);
+      padding: 10px;
+      border-radius: 5px;
+  }
   }
 </style>
 <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
@@ -346,13 +377,31 @@
   <header>
     <div class="container">
       <nav>
-        <div class="logo">jeune femme éveillée</div>
+        <div class="logo"><img src="./img/20240729_201123.png" alt=""></div>
         <div class="nav-links">
           <a href="./accueil.html">Accueil</a>
           <a href="./programmes.html">Programmes</a>
           <a href="./apropos.html">À propos</a>
           <a href="./contact.html">Contact</a>
         </div>
+        <button id="menu-toggle">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="h-6 w-6"
+          >
+            <line x1="4" x2="20" y1="12" y2="12"></line>
+            <line x1="4" x2="20" y1="6" y2="6"></line>
+            <line x1="4" x2="20" y1="18" y2="18"></line>
+          </svg>
+        </button>
       </nav>
     </div>
   </header>
@@ -474,7 +523,13 @@
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const header = document.querySelector('header');
-      
+      const menuIcon = document.getElementById('menu-toggle');
+    const navLinks = document.querySelector('.nav-links');
+    menuIcon.addEventListener('click', () => {
+      navLinks.classList.toggle('active');
+    });
+
+
       window.addEventListener('scroll', () => {
         if (window.scrollY > 50) {
           header.classList.add('scrolled');
@@ -523,6 +578,7 @@
       }
 
       setInterval(nextSlide, 5000);
+    
     });
   </script>
 </body>
