--- a/apropos.html
+++ b/apropos.html
@@ -364,19 +364,19 @@
             </div>
           </div>
           <div class="team-member">
-            <img src="https://media.istockphoto.com/id/1412652081/photo/ethnic-small-business-owner-smiling-cheerfully-in-her-shop.jpg?s=1024x1024&w=is&k=20&c=fGjHVq4e1-_mbd7XBZi9Dhdp4Bi0sUbkYk6aMPc1uJo=" alt="Portrait de Sophie Martin, Directrice des Programmes" class="team-member-image" width="250" height="300">
+            <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/453408606_1842474466236605_5076012479337337519_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeFjC7jtV3pFIlKu7OFD5diDxUiKhY6vawDFSIqFjq9rAIt-lBI-Z4EVQ8RRpB0OJCuWbuRHR_s--pUzRvd0y1cE&_nc_ohc=GdhLjoYvrLQQ7kNvgF0OrEh&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYAAq11IKWQjIYLyKvstdZni1tZGkGSZrVLqwR-ux1ukvg&oe=66B6648F" alt="Portrait de Sophie Martin, Directrice des Programmes" class="team-member-image" width="250" height="300">
             <div class="team-member-info">
-              <h3 class="team-member-name">Sophie Ngoy</h3>
-              <p class="team-member-role">Directrice des Programmes</p>
-              <p>Experte en développement professionnel et gestion de carrière.</p>
+              <h3 class="team-member-name">Dorcas Bonze</h3>
+              <p class="team-member-role">Responsable événementiel</p>
+              <p>Experte en organisation de nos événements.</p>
             </div>
           </div>
           <div class="team-member">
-            <img src="https://media.istockphoto.com/id/1398994132/photo/happy-businesswoman-using-a-digital-tablet-young-leading-businesswoman-using-a-wireless.jpg?s=1024x1024&w=is&k=20&c=W35ywsjgemV4txriyvml2ytWzz01Wmaa1gCGYujkHYw=" alt="Portrait de Laure Benoit, Coach en Leadership" class="team-member-image" width="250" height="300">
+            <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/453328780_1842472222903496_8895564061841464364_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeFF5mmbpdU7WWTjL7FqhMlGQcdv86CzwYhBx2_zoLPBiHt-iIh2uZrpqWeVJ886wUWfl-gmg1HwJJo87Py61qQ6&_nc_ohc=dPQPsJE8oUcQ7kNvgFA258y&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYBWHuUxlhTtrde01Y-LyE1qqauukaq1zNzMGtLrWYPS9Q&oe=66B68652" alt="Portrait de Laure Benoit, Coach en Leadership" class="team-member-image" width="250" height="300">
             <div class="team-member-info">
               <h3 class="team-member-name">Laure Benga</h3>
-              <p class="team-member-role">Coach en Leadership</p>
-              <p>Spécialiste du développement personnel et du leadership authentique.</p>
+              <p class="team-member-role">Administratrice</p>
+              <p>Spécialiste en administration d'entreprise.</p>
             </div>
           </div>
         </div>
@@ -423,8 +423,8 @@
           <h3>Liens Rapides</h3>
           <ul>
             <li><a href="./programmes.html">Nos Programmes</a></li>
-            <li><a href="https://autonomie-femmes.fr/blog">Blog</a></li>
-            <li><a href="https://autonomie-femmes.fr/evenements">Événements</a></li>
+            <li><a href="https://chat.whatsapp.com/ISJTh6v28UO75g4xFBaEKa">intégrez notre groupe whatsapp</a></li>
+            <li><a href="https://web.facebook.com/profile.php?id=61556164937889&locale=fr_FR">Événements</a></li>
             <li><a href="./contact.html">Nous Contacter</a></li>
           </ul>
         </div>
