--- a/contact.html
+++ b/contact.html
@@ -373,8 +373,8 @@
           <h3>Liens Rapides</h3>
           <ul>
             <li><a href="./programmes.html">Nos Programmes</a></li>
-            <li><a href="https://autonomie-femmes.fr/blog">Blog</a></li>
-            <li><a href="https://autonomie-femmes.fr/evenements">Événements</a></li>
+            <li><a href="https://chat.whatsapp.com/ISJTh6v28UO75g4xFBaEKa">intégrez notre groupe whatsapp</a></li>
+            <li><a href="https://web.facebook.com/profile.php?id=61556164937889&locale=fr_FR">Événements</a></li>
             <li><a href="./contact.html">Nous Contacter</a></li>
           </ul>
         </div>
