--- a/programmes.html
+++ b/programmes.html
@@ -301,7 +301,7 @@
             <div class="program-content">
               <h2 class="program-title">Leadership Féminin</h2>
               <p class="program-description">Développez vos compétences en leadership et apprenez à diriger avec confiance et authenticité.</p>
-              <a href="https://autonomie-femmes.fr/programmes/leadership-feminin" class="program-cta">En savoir plus</a>
+              <a href="./apropos.html" class="program-cta">En savoir plus</a>
             </div>
           </div>
           <div class="program-card">
@@ -311,7 +311,7 @@
             <div class="program-content">
               <h2 class="program-title">Développement de Carrière</h2>
               <p class="program-description">Planifiez et accélérez votre progression professionnelle avec des stratégies éprouvées.</p>
-              <a href="https://autonomie-femmes.fr/programmes/developpement-carriere" class="program-cta">En savoir plus</a>
+              <a href="./apropos.html" class="program-cta">En savoir plus</a>
             </div>
           </div>
           <div class="program-card">
@@ -321,17 +321,17 @@
             <div class="program-content">
               <h2 class="program-title">Entrepreneuriat au Féminin</h2>
               <p class="program-description">Lancez et développez votre entreprise avec confiance et les bons outils.</p>
-              <a href="https://autonomie-femmes.fr/programmes/entrepreneuriat-feminin" class="program-cta">En savoir plus</a>
+              <a href="./apropos.html" class="program-cta">En savoir plus</a>
             </div>
           </div>
           <div class="program-card">
             <div class="program-image">
-              <img src="https://images.pexels.com/photos/3205570/pexels-photo-3205570.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Femme pratiquant la méditation pour l'équilibre vie-travail" width="300" height="200">
+              <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/453414248_1842474632903255_1962803080760899476_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeE6IC2u8Z7zKrwywqSFwscuIOFtIYyhajQg4W0hjKFqNDc1j-RK1UWDal0_Mp7mp7zRdIcr9gdMJlnznOcSF-r4&_nc_ohc=zC55tB2UaZEQ7kNvgEAruF-&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYAzO0ZflI_-Y1HNMpzui6WPMLw2HNMKAU8yzLquoTr1IA&oe=66B68965" alt="Femme pratiquant la méditation pour l'équilibre vie-travail" width="300" height="200">
             </div>
             <div class="program-content">
               <h2 class="program-title">Équilibre Vie Professionnelle et Personnelle</h2>
               <p class="program-description">Apprenez à gérer votre temps et votre énergie pour une vie épanouie.</p>
-              <a href="https://autonomie-femmes.fr/programmes/equilibre-vie-pro-perso" class="program-cta">En savoir plus</a>
+              <a href="./apropos.html" class="program-cta">En savoir plus</a>
             </div>
           </div>
         </div>
@@ -350,8 +350,8 @@
           <h3>Liens Rapides</h3>
           <ul>
             <li><a href="./programmes.html">Nos Programmes</a></li>
-            <li><a href="https://autonomie-femmes.fr/blog">Blog</a></li>
-            <li><a href="https://autonomie-femmes.fr/evenements">Événements</a></li>
+            <li><a href="https://chat.whatsapp.com/ISJTh6v28UO75g4xFBaEKa">intégrez notre groupe whatsapp</a></li>
+            <li><a href="https://web.facebook.com/profile.php?id=61556164937889&locale=fr_FR">Événements</a></li>
             <li><a href="./contact.html">Nous Contacter</a></li>
           </ul>
         </div>
