--- a/contact.html
+++ b/contact.html
@@ -310,7 +310,7 @@
         <div class="contact-grid">
           <div class="contact-form">
             <h2>Envoyez-nous un message</h2>
-            <form id="contact-form" action="https://formspree.io/f/xkgwrobg"
+            <form id="contact-form" action="https://formspree.io/f/myzgwvqe"
             method="POST">
               <div class="form-group">
                 <label for="name">Nom</label>
@@ -333,22 +333,12 @@
           </div>
           <div class="contact-info">
             <div class="contact-item">
-              <h3>Adresse</h3>
-              <p>123 Rue de l'Empowerment</p>
-              <p>75001 Paris, France</p>
-            </div>
-            <div class="contact-item">
               <h3>Téléphone</h3>
-              <p>+33 1 23 45 67 89</p>
+              <p>+243 974 479 273</p>
             </div>
             <div class="contact-item">
               <h3>Email</h3>
-              <p>contact@jeune femme éveillée.fr</p>
-            </div>
-            <div class="contact-item">
-              <h3>Horaires</h3>
-              <p>Lundi - Vendredi: 9h00 - 18h00</p>
-              <p>Samedi: 10h00 - 14h00</p>
+              <p>Graciakabusu@gmail.com</p>
             </div>
             <div class="social-icons">
               <a href="https://facebook.com/jeune femme éveillée" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
