--- a/apropos.html
+++ b/apropos.html
@@ -356,7 +356,7 @@
         <h2>Notre Équipe</h2>
         <div class="team-grid">
           <div class="team-member">
-            <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/452204901_1834943480323037_1950257659356608125_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeHbXYI2YB9Pq0z_W7nUwIVCkf_44fSd7ciR__jh9J3tyGuR0yvOmeDZrbUBtF94OGW3HRbEoonom3ZrDUYFHyam&_nc_ohc=1N_HQWzRcpoQ7kNvgGuyCaf&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYARc1GEz7OVMhQGFG61L16a5-3qj3EwPO0tfoeAun1i2Q&oe=66AD79D8" alt="Portrait de Marie Dupont, fondatrice et CEO" class="team-member-image" width="250" height="300">
+            <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/452204901_1834943480323037_1950257659356608125_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeHbXYI2YB9Pq0z_W7nUwIVCkf_44fSd7ciR__jh9J3tyGuR0yvOmeDZrbUBtF94OGW3HRbEoonom3ZrDUYFHyam&_nc_ohc=1N_HQWzRcpoQ7kNvgGuyCaf&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYARc1GEz7OVMhQGFG61L16a5-3qj3EwPO0tfoeAun1i2Q&oe=66AD79D8" alt="Portrait de Grace Kabusu, fondatrice et CEO" class="team-member-image" width="250" height="300">
             <div class="team-member-info">
               <h3 class="team-member-name">Coach Klg</h3>
               <p class="team-member-role">Fondatrice et CEO</p>
