--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>accueil - jfe </title>
+<title>index.html - jfe </title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
 
@@ -379,7 +379,7 @@
       <nav>
         <div class="logo"><img src="./img/20240729_201123.png" alt=""></div>
         <div class="nav-links">
-          <a href="./accueil.html">Accueil</a>
+          <a href="./index.html">Accueil</a>
           <a href="./programmes.html">Programmes</a>
           <a href="./apropos.html">À propos</a>
           <a href="./contact.html">Contact</a>
