--- a/apropos.html
+++ b/apropos.html
@@ -300,7 +300,7 @@
           <img src="./img/20240729_201123.png" alt="">
         </div>
         <div class="nav-links">
-          <a href="./accueil.html">Accueil</a>
+          <a href="./index.html">Accueil</a>
           <a href="./programmes.html">Programmes</a>
           <a href="./apropos.html">À propos</a>
           <a href="./contact.html">Contact</a>
