--- a/apropos.html
+++ b/apropos.html
@@ -336,7 +336,7 @@
       </div>
     </section>
 
-    <section class="about-section">
+    <!-- <section class="about-section">
       <div class="container">
         <div class="about-grid">
           <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/453262303_1841496169667768_3084310341274874982_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeH4xCy83WTIwyStdpzJ9oBBp_deDOsPb0On914M6w9vQy-QutCBKJIkw0a5lrEEyGsbmwjdm9Gm_mvC92DCzkEb&_nc_ohc=nx0B01O1AYIQ7kNvgEr4RcT&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYApJhIjrp04CIUTs8COuiIthTVO1GPs1DYZe0YQFw636Q&oe=66AD5F0A" alt="Femmes participant à un atelier jeune femme éveillée" class="about-image" width="600" height="400">
@@ -349,7 +349,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="team-section">
       <div class="container">
