--- a/apropos.html
+++ b/apropos.html
@@ -336,13 +336,27 @@
       </div>
     </section>
 
+    <!-- <section class="about-section">
+      <div class="container">
+        <div class="about-grid">
+          <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/453262303_1841496169667768_3084310341274874982_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeH4xCy83WTIwyStdpzJ9oBBp_deDOsPb0On914M6w9vQy-QutCBKJIkw0a5lrEEyGsbmwjdm9Gm_mvC92DCzkEb&_nc_ohc=nx0B01O1AYIQ7kNvgEr4RcT&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYApJhIjrp04CIUTs8COuiIthTVO1GPs1DYZe0YQFw636Q&oe=66AD5F0A" alt="Femmes participant à un atelier jeune femme éveillée" class="about-image" width="600" height="400">
+          <div class="about-content">
+            <h2>Notre Histoire</h2>
+            <p> Fondée en 2023, jeune femme éveillée est une plateforme de formation dont le but est justement d'éveiller la conscience des femmes afin que celles-ci ressortent le plein potentiel qu'elles ont.
+              Reléguées souvent hors de la course vers l'excellence et placée généralement dans le rôle de femme au foyer, la femme a petit à petit éteint le feu de sa passion, revu à la baisse ses ambitions de vie.</p>
+            <p>Notre plateforme s'est donc donnée pour but d'éveiller la conscience, d'encourager et de motiver la femme à se détacher des limites et des forteresses de pensées et de conceptions réductrices afin de poursuivre ses rêves, ses ambitions tout en gardant un équilibre basé sur les sages conseils de la Bible.</p>
+            <p>Elle a un potentiel et le monde a besoin de son potentiel à un horizon sans limites.</p>
+          </div>
+        </div>
+      </div>
+    </section> -->
 
     <section class="team-section">
       <div class="container">
         <h2>Notre Équipe</h2>
         <div class="team-grid">
           <div class="team-member">
-            <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/452204901_1834943480323037_1950257659356608125_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeHbXYI2YB9Pq0z_W7nUwIVCkf_44fSd7ciR__jh9J3tyGuR0yvOmeDZrbUBtF94OGW3HRbEoonom3ZrDUYFHyam&_nc_ohc=1N_HQWzRcpoQ7kNvgGuyCaf&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYARc1GEz7OVMhQGFG61L16a5-3qj3EwPO0tfoeAun1i2Q&oe=66AD79D8" alt="Portrait de Grace Kabusu, fondatrice et CEO" class="team-member-image" width="250" height="300">
+            <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/452177672_1834942543656464_3523667760959329271_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeEiQpG-HnwzUJhWg-cB9HjkpPi3n2L6j4ik-LefYvqPiA5bOF-JhDHMsROUbeZiaPmGV5SSEJn9Eb2eeL6jW6kn&_nc_ohc=Eskpt1yHgA8Q7kNvgH4rQ1Z&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYDW3XCIdir5E10tQdENgA5WLmejMexSLkqYdYzTfU7Isg&oe=66B988DA" alt="Portrait de Grace Kabusu, fondatrice et CEO" class="team-member-image" width="250" height="300">
             <div class="team-member-info">
               <h3 class="team-member-name">Coach Klg</h3>
               <p class="team-member-role">Fondatrice et CEO</p>
