--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
       <div class="hero-content">
         <h1>Libérez Votre Potentiel</h1>
         <p>Formation et développement personnel pour l'autonomisation des femmes</p>
-        <a href="https://autonomie-femmes.fr/programmes" class="cta-button">Découvrez nos programmes</a>
+        <a href="./programmes.html" class="cta-button">Découvrez nos programmes</a>
       </div>
       <div class="wave"></div>
     </section>
