--- a/apropos.html
+++ b/apropos.html
@@ -86,7 +86,6 @@
 
   .about-section {
     padding: 100px 0;
-    width: 50%;
   }
 
   .about-grid {
@@ -289,6 +288,28 @@
       background-color: var(--primary-blue);
       padding: 10px;
       border-radius: 5px;
+  }
+
+  
+  .about-section {
+    padding: 100px 0;
+    width: 50%;
+  }
+
+  .about-image {
+    max-width: 50%;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  }
+
+  .about-content h2 {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+
+  .about-content p {
+    margin-bottom: 10px;
   }
   }
 </style>
