correction about-section

--- a/apropos.html
+++ b/apropos.html
@@ -294,6 +294,7 @@
   .about-section {
     padding: 100px 0;
     width: 50%;
+    border: 1px solid red;
   }
 
   .about-image {
@@ -313,6 +314,7 @@
     word-wrap: break-word; /* Permet de couper les mots trop longs pour qu'ils reviennent à la ligne */
     white-space: normal;   /* Assure que les espaces blancs sont traités normalement */
     overflow-wrap: break-word; /* Alternative à word-wrap pour une meilleure compatibilité */
+    border: 1px solid green;
 }
   }
 </style>
