correction about-section

--- a/apropos.html
+++ b/apropos.html
@@ -109,6 +109,9 @@
 
   .about-content p {
     margin-bottom: 20px;
+    word-wrap: break-word; /* Permet de couper les mots trop longs pour qu'ils reviennent à la ligne */
+    white-space: normal;   /* Assure que les espaces blancs sont traités normalement */
+    overflow-wrap: break-word;
   }
 
   .team-section {
@@ -293,7 +296,7 @@
   
   .about-section {
     padding: 100px 0;
-    width: 50%;
+    width: 100%;
     border: 1px solid red;
   }
 
