correction about-section

--- a/apropos.html
+++ b/apropos.html
@@ -102,6 +102,9 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   }
 
+.about-content {
+    border: 1px solid blue;
+  }
   .about-content h2 {
     font-size: 36px;
     margin-bottom: 20px;
