--- a/apropos.html
+++ b/apropos.html
@@ -322,6 +322,10 @@
     overflow-wrap: break-word; /* Alternative à word-wrap pour une meilleure compatibilité */
     border: 1px solid green;
 }
+
+.about-content {
+width: 50%;
+  }
   }
 </style>
 </head>
