--- a/apropos.html
+++ b/apropos.html
@@ -405,7 +405,7 @@ width: 100%;
           <div class="team-member">
             <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/453328780_1842472222903496_8895564061841464364_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeFF5mmbpdU7WWTjL7FqhMlGQcdv86CzwYhBx2_zoLPBiHt-iIh2uZrpqWeVJ886wUWfl-gmg1HwJJo87Py61qQ6&_nc_ohc=dPQPsJE8oUcQ7kNvgFA258y&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYBWHuUxlhTtrde01Y-LyE1qqauukaq1zNzMGtLrWYPS9Q&oe=66B68652" alt="Portrait de Laure Benoit, Coach en Leadership" class="team-member-image" width="250" height="300">
             <div class="team-member-info">
-              <h3 class="team-member-name">Laure Benga</h3>
+              <h3 class="team-member-name">Estrella</h3>
               <p class="team-member-role">Administratrice</p>
               <p>Spécialiste en administration d'entreprise.</p>
             </div>
